--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 JWT_SECRET_KEY = gfg_jwt_secret_key
 TOKEN_HEADER_KEY = gfg_token_header_key
+TWILIO_ACCOUNT_SID = AC60567739dc9174c77584cbaf681307d7
+TWILIO_AUTH_TOKEN = fbfc294c0d1b7c80bc411cf543787fc4
